# ChangeLog for media-plugins/audacious-plugins
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.30 2007/02/05 20:29:38 chainsaw Exp $

*audacious-plugins-1.3.0_alpha4 (05 Feb 2007)

  05 Feb 2007; Tony Vroon <chainsaw@gentoo.org>
  +audacious-plugins-1.3.0_alpha4.ebuild:
  New developer release. Three new plugins: a stable status icon (not be
  confused with the third-party docklet plugin), OSD (based on ghosd) and
  support for evdev input devices. The opengl USE-flag now enables projectm,
  as requested by Jozsef Daniel <simius@mail.tvnet.hu> in bug #163764.

*audacious-plugins-1.3.0_alpha3 (25 Jan 2007)

  25 Jan 2007; Tony Vroon <chainsaw@gentoo.org>
  +audacious-plugins-1.3.0_alpha3.ebuild:
  New alpha release. Significant improvements to HTTP stream handling, do test
  that. Add TTA USE-flag as suggested by Kazuki Oikawa <kazuki@panicode.com>
  in bug #163557.

*audacious-plugins-1.3.0_alpha2 (08 Jan 2007)

  08 Jan 2007; Tony Vroon <chainsaw@gentoo.org>
  +audacious-plugins-1.3.0_alpha2.ebuild:
  Adding masked alpha2 build. No support offered, report bugs upstream only.

  07 Jan 2007; Tony Vroon <chainsaw@gentoo.org>
  -audacious-plugins-1.3.0_alpha1.ebuild:
  Developer releases are not appreciated by the community. Closes bug #160761.

*audacious-plugins-1.3.0_alpha1 (05 Jan 2007)

  05 Jan 2007; Tony Vroon <chainsaw@gentoo.org>
  +audacious-plugins-1.3.0_alpha1.ebuild:
  Developer release of the new 1.3 series. File bugs upstream at
  http://bugs-meta.atheme.org/ and not in the Gentoo bug tracker. Major
  changes in playlist handling and file scanning. Add missing dependency on
  libsdl for paranormal visual plugin, closes bug #154840, with thanks to
  Sascha Geschwandtner <s.geschwandtner@gmx.de>.

  20 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  audacious-plugins-1.2.5.ebuild:
  Stable on sparc

  05 Dec 2006; Jeroen Roovers <jer@gentoo.org>