@@ -1,3 +1,0 @@
-MD5 c789836f6651e85ad6f3bbe0bb203a89 audacious-plugins-1.3.0-alpha3.tgz 2549535
-RMD160 07d9076eb941e1333dcae09f78bc22b415af8e0e audacious-plugins-1.3.0-alpha3.tgz 2549535
-SHA256 59de377e9e8e48cb884839e01928d6e4804affb144d3e9faa3e243be9723d689 audacious-plugins-1.3.0-alpha3.tgz 2549535
