@@ -1,0 +1,3 @@
+MD5 39f77a95b392c76d031eba4a47bf0a05 audacious-plugins-1.3.0-alpha5.tgz 2647655
+RMD160 65d994a3ea7fef4edf90557f98b09d7108f61a6e audacious-plugins-1.3.0-alpha5.tgz 2647655
+SHA256 060b545f83fcd506f1794d5b74608610cb6a34128f544e8771745090e1bef59e audacious-plugins-1.3.0-alpha5.tgz 2647655
