@@ -1,6 +1,15 @@
 # ChangeLog for media-plugins/audacious-plugins
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.30 2007/02/05 20:29:38 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.31 2007/02/16 11:21:07 chainsaw Exp $
+
+*audacious-plugins-1.3.0_alpha5 (16 Feb 2007)
+
+  16 Feb 2007; Tony Vroon <chainsaw@gentoo.org>
+  -audacious-plugins-1.3.0_alpha3.ebuild,
+  +audacious-plugins-1.3.0_alpha5.ebuild:
+  New developer release. Note that MP3 playback now depends on libmad, instead
+  of on a modified internal mpg123 library. As such the USE-flag to set is now
+  mad instead of mp3.
 
 *audacious-plugins-1.3.0_alpha4 (05 Feb 2007)
 
